Second draft of portfolio with html basics laid out

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gurinderpreet Singh Portfolio</title>
+        <title>Project 1</title>
     </head>
 
-    <body>
-        <h1>Portfolio Start</h1>
-        <p>This is the start of the portfolio</p>
-    </body>
+    <div>
+        <section>
+            <body>
+                <h1>Gurinderpreet Singh</h1>
+            </body>
+        </section>
+
+        <section>
+            <p>About</p>
+            <p>Portfolio</p>
+            <p>Contact</p>
+        </section>
+    </div>
+
+    <div>
+        <section>
+            <p>About Me</p>
+        </section>
+
+        <section>
+            Information and image will be in this section.
+        </section>
+    </div>
 
 </html>
