Updated CSS and reorganized HTML for layout requirements

--- a/index.html
+++ b/index.html
@@ -2,30 +2,48 @@
 <html>
     <head>
         <title>Project 1</title>
+        <link rel="stylesheet" href="index.css">
     </head>
 
-    <div>
-        <section>
-            <body>
+<div>
+<body>
+    <div id="top">
+        <section id="name">
                 <h1>Gurinderpreet Singh</h1>
-            </body>
         </section>
 
-        <section>
-            <p>About</p>
-            <p>Portfolio</p>
-            <p>Contact</p>
-        </section>
-    </div>
-
-    <div>
-        <section>
-            <p>About Me</p>
-        </section>
-
-        <section>
-            Information and image will be in this section.
+        <section id="links">
+            <div class="link">
+                <p>About</p>
+            </div>
+            <div class="link">
+                <p>Portfolio</p>
+            </div>
+            <div class="link">
+                <p>Contact</p>
+            </div>
         </section>
     </div>
+</body>
+</div>
 
+
+<div>
+<body>
+<div>
+    <div class="box">
+        <div id="content">
+            <section id="aboutme">
+                <p>About Me</p>
+            </section>
+<hr>
+            <section id="information">
+                <img src="https://static01.nyt.com/images/2019/09/04/business/04chinaclone-01/merlin_160087014_de761d9a-4360-402d-a15b-ddeff775760d-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="cat picture">
+                Information and image will be in this section.
+            </section>
+        </div>
+    </div>
+</div>
+</body>
+</div>
 </html>
