--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 
         <section id="links">
             <div class="link">
+                <div id="about">
                 <p>About</p>
+                </div>
             </div>
             <div class="link">
+                <div id="portfolio">
                 <p>Portfolio</p>
+                </div>
             </div>
             <div class="link">
+                <div id="contact">
                 <p>Contact</p>
+                </div>
             </div>
         </section>
     </div>
@@ -39,7 +45,16 @@
 <hr>
             <section id="information">
                 <img src="https://static01.nyt.com/images/2019/09/04/business/04chinaclone-01/merlin_160087014_de761d9a-4360-402d-a15b-ddeff775760d-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="cat picture">
-                Information and image will be in this section.
+                Lorem ipsum dolor sit amet, sit deleniti inciderint te, cu nam solet ubique, molestie intellegebat ut mel. Sed definitionem signiferumque id. Quis dico maluisset at has, an sit modo magna. His cibo maiorum ei, ei quo assentior consequuntur. Pro no esse patrioque, graece mucius ei has. Te vel quaeque intellegebat.
+                Ea mutat legimus senserit has, his accusamus disputationi ne, dicunt nostrud te nec. An veritus recusabo suavitate mea. 
+                Sonet noluisse eu per, ex agam maluisset assentior duo. Ne usu liber solet, eum in iudico deleniti probatus. Id utinam omittam democritum eam, elitr detracto vix ne, cu alia accusam eleifend eos.
+                <br>
+                <br>
+                Commodo luptatum platonem vim ad, no erat dicit mundi nam. Agam liberavisse at pri, vix ut ferri idque. Justo oporteat legendos in per, duo nibh bonorum suscipiantur an. Vis facer deleniti sensibus te, no eum posse aeterno. Labitur efficiendi ex mei, pro at omnis posse. 
+                <br>
+                Consequat appellantur eu eum, oportere vituperata ex pro, nec dolore malorum recusabo ei.
+                Cu est tamquam euismod copiosae. Ei quo atqui altera, vix reque putent in. Eum ne ipsum volumus. Sed eius utamur persius an.
+                Qui cu ullum audiam assentior, erat singulis ex vis, idque mundi atomorum nam ei. Duo forensibus omittantur at. Eu eum luptatum deterruisset. Populo omittantur cu eum. Choro malorum euripidis ut pro. His et fastidii apeirian. At verear definiebas sed.
             </section>
         </div>
     </div>
