Minor alterations to box class and link class

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <section id="links">
             <div class="link">
                 <div id="about">
-                <p>About</p>
+                <p class="zero">About</p>
                 </div>
             </div>
             <div class="link">
                 <div id="portfolio">
-                <p>Portfolio</p>
+                <p class="zero">Portfolio</p>
                 </div>
             </div>
             <div class="link">
                 <div id="contact">
-                <p>Contact</p>
+                <p class="zero">Contact</p>
                 </div>
             </div>
         </section>
