--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
 
-<div>
+
 <body>
     <div id="top">
         <section id="name">
@@ -44,13 +44,14 @@
             </section>
 <hr>
             <section id="information">
-                <img src="https://static01.nyt.com/images/2019/09/04/business/04chinaclone-01/merlin_160087014_de761d9a-4360-402d-a15b-ddeff775760d-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="cat picture">
+                <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/23031357_1677426285609006_6751485942766415672_n.jpg?_nc_cat=104&_nc_ohc=NI2CVxJMh7cAQlaACWeejupZydbYX19bz08WBYDTDi8De9_VLeVCBt56Q&_nc_ht=scontent-lax3-1.xx&oh=2ed8d5367bb6cc8ea8b73d51774cd62b&oe=5EB1A720" alt="picture">
                 Lorem ipsum dolor sit amet, sit deleniti inciderint te, cu nam solet ubique, molestie intellegebat ut mel. Sed definitionem signiferumque id. Quis dico maluisset at has, an sit modo magna. His cibo maiorum ei, ei quo assentior consequuntur. Pro no esse patrioque, graece mucius ei has. Te vel quaeque intellegebat.
                 Ea mutat legimus senserit has, his accusamus disputationi ne, dicunt nostrud te nec. An veritus recusabo suavitate mea. 
                 Sonet noluisse eu per, ex agam maluisset assentior duo. Ne usu liber solet, eum in iudico deleniti probatus. Id utinam omittam democritum eam, elitr detracto vix ne, cu alia accusam eleifend eos.
                 <br>
                 <br>
                 Commodo luptatum platonem vim ad, no erat dicit mundi nam. Agam liberavisse at pri, vix ut ferri idque. Justo oporteat legendos in per, duo nibh bonorum suscipiantur an. Vis facer deleniti sensibus te, no eum posse aeterno. Labitur efficiendi ex mei, pro at omnis posse. 
+                <br>
                 <br>
                 Consequat appellantur eu eum, oportere vituperata ex pro, nec dolore malorum recusabo ei.
                 Cu est tamquam euismod copiosae. Ei quo atqui altera, vix reque putent in. Eum ne ipsum volumus. Sed eius utamur persius an.
@@ -60,5 +61,9 @@
     </div>
 </div>
 </body>
-</div>
+
+<footer class="clearfix">
+    <p>Copyright &#x24B8</p>
+</footer>
+
 </html>
