--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project 1</title>
+        <title>About</title>
         <link rel="stylesheet" href="index.css">
     </head>
 
