Added content to contact and portfolio pages

--- a/index.html
+++ b/index.html
@@ -13,21 +13,31 @@
         </section>
 
         <section id="links">
+
             <div class="link">
                 <div id="about">
-                <p class="zero">About</p>
+                    <div class="zero">
+                <p a href="#">About</p>
+                    </div>
                 </div>
             </div>
+
             <div class="link">
-                <div id="portfolio">
-                <p class="zero">Portfolio</p>
+                <div id="portfoliolink">
+                    <div class="zero">
+                <p a href="#">Portfolio</p>
+                    </div>
                 </div>
             </div>
+
             <div class="link">
                 <div id="contact">
-                <p class="zero">Contact</p>
+                    <div class="zero">
+                <p a href="#">Contact</p>
+                    </div>
                 </div>
             </div>
+
         </section>
     </div>
 </body>
