--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,25 @@
         <section id="links">
             <div class="link">
                 <div id="about">
-                <p class="zero">About</p>
+                    <div class="zero">
+                <p a href="#">About</p>
+                </div>
                 </div>
             </div>
             <div class="link">
-                <div id="portfolio">
-                <p class="zero">Portfolio</p>
+                <div id="portfoliolink">
+                    <div id="about">
+                        <div class="zero">
+                    <p a href="#">Portfolio</p>
+                    </div>
                 </div>
             </div>
             <div class="link">
                 <div id="contact">
-                <p class="zero">Contact</p>
+                    <div id="about">
+                        <div class="zero">
+                    <p a href="#">Contact</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -39,12 +47,35 @@
 <div>
     <div class="box">
         <div id="content">
-            <section id="contacthead">
-                
+            <section id="aboutme">
+                Contact
             </section>
 <hr>
             <section id="contactbody">
-                
+                <div class="contactinfo">
+                <p>
+                <label>Name</label>
+                <br>
+                <input type ="text"
+                        id ="contact_name"/>
+                </p>
+                </div>
+                <div class="contactinfo">
+                <p>
+                    <label>Email</label>
+                    <br>
+                    <input type="text"
+                            id="email"/>
+                </p>
+                </div>
+                <div class="contactinfo">
+                <p>
+                    <label>Message</label>
+                    <br>
+                    <input type="text"
+                            id="message"/>
+                </p>
+            </div>
             </section>
         </div>
     </div>
