added links to the links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="link">
                 <div id="about">
                     <div class="zero">
-                <p a href="#">About</p>
+                <p a href="https://gurinderp.github.io/Portfolio/">About</p>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="link">
                 <div id="portfoliolink">
                     <div class="zero">
-                <p a href="#">Portfolio</p>
+                <p a href="https://gurinderp.github.io/portfolioport/">Portfolio</p>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="link">
                 <div id="contact">
                     <div class="zero">
-                <p a href="#">Contact</p>
+                <p a href="https://gurinderp.github.io/portfoliocontact/">Contact</p>
                     </div>
                 </div>
             </div>
