updated html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,9 @@
     <head>
         <title>Portfolio</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.html">
+        <link rel="stylesheet" href="contact.html">
+        <link rel="stylesheet" href="portfolio.html">
     </head>
 
 
@@ -17,7 +20,7 @@
             <div class="link">
                 <div id="about">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/Portfolio/">About</p>
+                <a href="index.html">About</a>
                     </div>
                 </div>
             </div>
@@ -25,7 +28,7 @@
             <div class="link">
                 <div id="portfoliolink">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/portfolioport/">Portfolio</p>
+                <a href="portfolio.html">Portfolio</a>
                     </div>
                 </div>
             </div>
@@ -33,7 +36,7 @@
             <div class="link">
                 <div id="contact">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/portfoliocontact/">Contact</p>
+                <a href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
@@ -56,10 +59,16 @@
             <section id="portfoliobody">
                 <div class="container">
                     <div>
-                        <img src="https://scontent.fsac1-1.fna.fbcdn.net/v/t1.0-9/23031357_1677426285609006_6751485942766415672_n.jpg?_nc_cat=104&_nc_ohc=4hQ1GHvEaBoAQkZiEc2zDZzANJngDRnvMhzlMgrm4_xwkDj3wySUj8GzA&_nc_ht=scontent.fsac1-1.fna&oh=8dcc8cf9b7c98bf1b4947923e1a6e412&oe=5EB1A720" alt="picture of me">
+                        <img src="http://placehold.it/200x200">
                     </div>
                     <div>
-                        <img src="https://miro.medium.com/max/3150/1*ro9U4HRwF5xwEbDdryAQFw.png">
+                        <img src="http://placehold.it/200x200">
+                    </div>
+                    <div>
+                        <img src="http://placehold.it/200x200">
+                    </div>
+                    <div>
+                        <img src="http://placehold.it/200x200">
                     </div>
                     <div>
                         <iframe src="https://scratch.mit.edu/projects/352739837/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
