--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
     <head>
         <title>Contact</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.html">
+        <link rel="stylesheet" href="contact.html">
+        <link rel="stylesheet" href="portfolio.html">
     </head>
 
 
@@ -17,7 +20,7 @@
             <div class="link">
                 <div id="about">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/Portfolio/">About</p>
+                <a href="index.html">About</a>
                     </div>
                 </div>
             </div>
@@ -25,7 +28,7 @@
             <div class="link">
                 <div id="portfoliolink">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/portfolioport/">Portfolio</p>
+                <a href="portfolio.html">Portfolio</a>
                     </div>
                 </div>
             </div>
@@ -33,7 +36,7 @@
             <div class="link">
                 <div id="contact">
                     <div class="zero">
-                <p a href="https://gurinderp.github.io/portfoliocontact/">Contact</p>
+                <a href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
