Altered layouts and design

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,27 +58,40 @@
 <hr>
             <section id="portfoliobody">
                 <div class="container">
-                    <div>
+
+                <div id="rowone">
+                    <div class="placehold">
                         <img src="http://placehold.it/200x200">
                     </div>
-                    <div>
+                    <div class="placehold">
                         <img src="http://placehold.it/200x200">
                     </div>
-                    <div>
+                </div>
+
+                    <hr>
+                <div id="rowtwo">
+                    <div class="placehold">
                         <img src="http://placehold.it/200x200">
                     </div>
-                    <div>
+                    <div class="placehold">
                         <img src="http://placehold.it/200x200">
                     </div>
-                    <div>
+                </div>
+
+                    <hr>
+                <div id="game">
+                    <div class="placehold">
                         <iframe src="https://scratch.mit.edu/projects/352739837/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
                     </div>
+                </div>
+
                 </div>
             </section>
         </div>
     </div>
 </div>
 </body>
+</div>
 
 <footer class="clearfix">
     <p>Copyright &#x24B8</p>
