added submit button to contact page

--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,9 @@
                             id="message"/>
                 </p>
             </div>
+            <div id="button">
+            <button type="button">Submit</button>
+            </div>
             </section>
         </div>
     </div>
